--- a/package.json
+++ b/package.json
@@ -29,9 +29,7 @@
     "gulp-util": "~3.0.6",
     "http-proxy-middleware": "~0.9.0",
     "lodash": "~3.10.1",
-    "wrench": "~1.5.8"
-  },
-  "dependencies": {
+    "wrench": "~1.5.8",
     "bootstrap": "^3.3.7"
   }
 }
