--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-sass": "~2.0.4",
     "gulp-size": "~2.0.0",
     "gulp-sourcemaps": "~1.6.0",
+    "gulp-uglify": "^3.0.0",
     "gulp-useref": "~1.3.0",
     "gulp-util": "~3.0.6",
     "http-proxy-middleware": "~0.9.0",
