Use px instead of %. Fix layout issue.

--- a/_config.yml
+++ b/_config.yml
@@ -32,12 +32,14 @@ plugins:
 collections:
   listings:
     output: true
+    layout: listing
     scope:
      permalink: /:collection/:path
     values:
      layout: listing
 
   testimonials:
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
