--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,9 @@ markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
+gems:
+  - jekyll-babel
+
 collections:
   listings:
     output: true
