Make agents a collection and variabalize them on the about page. Create modals for each agent and show/hide based on a data-id that matches up to each agent.

--- a/_config.yml
+++ b/_config.yml
@@ -42,6 +42,7 @@ collections:
      layout: listing
 
   testimonials:
+  agents:
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
