--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,11 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@example.com
+title: Ground Source
 phone: "(555)555-5555"
+email: your-email@example.com
+address: 1157 Highland Ave, Los Angeles, CA 90028
+instagram: groundsource
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
