--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -3,4 +3,6 @@ phone: (555)555-5555
 email: your-email@example.com
 address: 1157 Highland Ave, Los Angeles, CA 90028
 instagram: groundsource
+twitter: groundsource
+facebook: groundsource
 ---
