--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -2,7 +2,7 @@
 phone: (555)555-5555
 email: your-email@example.com
 address: 1157 Highland Ave, Los Angeles, CA 90028
-instagram: groundsource
-twitter: groundsource
-facebook: groundsource
+instagram: groundsourcela
+twitter: groundsourcela
+facebook: groundsourcela
 ---
