finish outline of newsletter template.. needs cleanup.

--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -5,4 +5,5 @@ address: 1157 Highland Ave, Los Angeles, CA 90028
 instagram: groundsourcela
 twitter: groundsourcela
 facebook: groundsourcela
+url: http://localhost:4000/
 ---
