--- a/_config.yml
+++ b/_config.yml
@@ -32,10 +32,11 @@ markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
-  -
+  - jekyll-multipost
 gems:
   - jekyll-babel
   - jekyll-autoprefixer
+  - jekyll-multipost
 
 collections:
   listings:
