--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -5,5 +5,6 @@ address: 1157 Highland Ave, Los Angeles, CA 90028
 instagram: groundsourcela
 twitter: groundsourcela
 facebook: groundsourcela
-url: http://localhost:4000/
+url: https://groundsource.bondbeta.com/
+# url: http://localhost:4000/
 ---
