Include static map API key in the site params. Create table-based footer for the newsletter. Add query params for going to contact-us and the testimonials section.

--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -7,4 +7,5 @@ twitter: groundsourcela
 facebook: groundsourcela
 url: https://groundsource.bondbeta.com
 # url: http://localhost:4000/
+staticGMap: AIzaSyB6EeWEnkg0W6sSgfcENm4V-ptnYG_WCFA
 ---
