--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -7,3 +7,5 @@ phone: 310-444-6100
 staticGMap: AIzaSyB6EeWEnkg0W6sSgfcENm4V-ptnYG_WCFA
 twitter: groundsourcela
 url: https://groundsource.bondbeta.com
+latitude: 34.047651
+longitude: -118.464022
