Three new collections for examples of servics.

--- a/_config.yml
+++ b/_config.yml
@@ -48,6 +48,9 @@ collections:
   testimonials:
   agents:
   case_studies:
+  tenant_examples:
+  landlord_examples:
+  investment_examples:
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
