--- a/_config.yml
+++ b/_config.yml
@@ -48,9 +48,9 @@ collections:
   testimonials:
   agents:
   case_studies:
-  tenant_examples:
-  landlord_examples:
-  investment_examples:
+  examples_investment:
+  examples_landlord:
+  examples_tenant:
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
