- Only use one google maps api key (for js api and static api, which is used for the newsletter) - Include markers for the map on the home page + newsletter static map - Load + instantiate the google maps api within home.js (instead of a completely separate script tag

--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -7,7 +7,7 @@ email: ckeller@groundsource.net
 facebook: groundsourcela
 instagram: "@groundsourcela"
 phone: 310-444-6100
-staticGMap: AIzaSyB6EeWEnkg0W6sSgfcENm4V-ptnYG_WCFA
+googleMapsKey: AIzaSyDoik8cTjwGcs2j51JGcicC61TBL7g2Iu0
 twitter: groundsourcela
 url: https://www.groundsource.net
 latitude: 34.047651
